# gmail_cleanup

./: .gitignore  LICENSE  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-cli-and-dry-run/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-message-discovery/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-deletion/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
gmail_cleanup/: __init__.py  auth.py  cleaner.py  date_utils.py  gmail_client.py  main.py
tests/: test_cleaner.py  test_date_utils.py  test_gmail_client.py
